fix x white space

--- a/x/css/style.css
+++ b/x/css/style.css
@@ -21,7 +21,7 @@ body {
 /*canvas { background: #eee; display: block; margin: 0 auto; }*/
 
 #interface {
-    height: 30%;
+    height: 31%;
     position: fixed;
     bottom:0%;
     width:100%;
